--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,17 @@
 html {
     background-color: #eef4fd;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 7px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 100px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(64, 133, 212);
+    border-radius: 100px;
+}
