--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,11 +7,11 @@ html {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: #e4e4e4;
+    background-color: #d6d0d0;
     border-radius: 100px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: rgb(64, 133, 212);
+    background-color: rgb(96, 125, 219);
     border-radius: 100px;
 }
